--- a/Frontend-React/UJapp/src/index.html
+++ b/Frontend-React/UJapp/src/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
-  <title>AgApiint</title>
+  <title>UJapp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -12,5 +11,4 @@
   <script src="https://accounts.google.com/gsi/client" async></script>
   <app-root></app-root>
 </body>
-
 </html>
